Build commands on Jenkins changed to be non-interactive.  Changed AppComponent spec with spy of UserService and removed two irrelevant test scenarios.  Tidied up style of code.

--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -3,7 +3,7 @@
   <div class="masthead-content">
     <div class="container">
       <h1 class="masthead-heading mb-0">Digital Jacks</h1>
-      <h2 class="masthead-subheading mb-0">Modern council for the citizens of Swansea</h2>
+      <h2 class="masthead-subheading mb-0">Modern council for the residents of Swansea</h2>
       <a routerLink="/signup" class="btn btn-primary btn-xl rounded-pill mt-5">Sign up now</a>
     </div>
   </div>
