Naming and structure improvements.  Removal of unused assets

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,7 +27,7 @@
           <label for="location" class="col-sm-2 col-form-label">Location</label>
         </div>
 
-        <l-locationpicker id="location"></l-locationpicker>
+        <app-location-picker id="location"></app-location-picker>
 
         <div class="form-group row mt-3">
           <label for="image" class="col-sm-2 col-form-label">Image</label>
