--- a/src/app/location-picker.css
+++ b/src/app/location-picker.css
@@ -1,9 +1,9 @@
-.locationpicker-loading {
+.location-picker-loading {
   width: 100%;
   text-align: center;
 }
 
-.l-locationpicker-class {
+.location-picker {
   position: relative;
   display: inline-block;
   overflow: hidden;
@@ -13,7 +13,7 @@
 
 @media (max-width: 500px) {
 
-  .l-locationpicker-class {
+  .location-picker {
     height: 300px;
   }
 
